--- a/app/scss/components/products/catalog.scss
+++ b/app/scss/components/products/catalog.scss
@@ -1,6 +1,7 @@
 .main-catalog {
   position: relative;
   padding-bottom: 10px;
+  background: #F6F5F3;
 
   @include screen('lg', 'max') {
     background: $background-additional;
@@ -10,31 +11,16 @@
     background-size: contain;
   }
 
-  &::before {
-    left: 0;
-    height: 895px;
-    width: 100%;
-    display: block;
+  &-fixed {
     position: absolute;
-    content: '';
-    background: $background-additional;
-    background-repeat: no-repeat;
-    background-image: url('../images/catalog-bottom.png');
-    background-position: bottom;
-    background-size: contain;
-
-    @include screen('lg', 'max') {
-      display: none;
-    }
-  }
-
-  &-box {
-    padding-top: 257px;
-    position: relative;
-
-    @include screen('xs', 'max') {
-      padding-top: 120px;
-    }
+    height: 240px;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    z-index: 0;
+    background: #fff!important;
+    padding-right: 20px;
+    padding-left: 20px;
 
     .text-bottom {
       position: absolute;
@@ -42,27 +28,26 @@
       color: #fff;
       font-family: 'Lineatura';
       position: absolute;
-      bottom: -1%;
+      bottom: 0%;
       font-size: 260px;
-      left: -50%;
-      transform: translateX(37%);
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      text-align: center;
 
       @include screen('lg', 'max') {
         display: none;
       }
+    }
+  }
 
-      &::after {
-        position: absolute;
-        display: block;
-        content: '';
-        background-repeat: no-repeat;
-        // background-image: url('../images/product-dashed-bg.svg');
-        width: 100vw;
-        height: 163px;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-49%);
-      }
+  &-box {
+    padding-top: 257px;
+    position: relative;
+    z-index: 10;
+    
+    @include screen('xs', 'max') {
+      padding-top: 120px;
     }
 
     .catalog-el {
@@ -91,7 +76,7 @@
       }
 
       &:nth-child(2n) {
-        margin-left: 30%;
+        margin-left: 37%;
 
         @include screen('lg', 'max') {
           margin-left: 0;
@@ -106,17 +91,164 @@
         opacity: 0;
         position: absolute;
 
-        /*@include screen('lg', 'max') {
-          opacity: 1;
-          position: relative;
+        &.first-card {
+          > i {
+            position: absolute;
+        
+            &:nth-child(1) {
+              top: 70%;
+              right: 0%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(0.8);
+              }
+            }
+        
+            &:nth-child(2) {
+              left: -20%;
+              top: 15%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(0.5);
+              }
+            }
+      
+            &:nth-child(3) {
+              right: 10%;
+              top: 5%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(1.1);
+              }
+            }
+          }
+        }
+      
+        &.two-card {
+          > i {
+            position: absolute;
+        
+            &:nth-child(1) {
+              bottom: -1%;
+              right: 38%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(0.8);
+              }
+            }
+        
+            &:nth-child(2) {
+              right: -35%;
+              top: 5%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(0.5);
+              }
+            }
+      
+            &:nth-child(3) {
+              left: -7%;
+              top: 30%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(1.1);
+              }
+            }
+          }
+        }
+      
+        &.third-card {
+          > i {
+            position: absolute;
+        
+            &:nth-child(1) {
+              bottom: -5%;
+              right: 22%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(0.8);
+              }
+            }
+        
+            &:nth-child(2) {
+              left: -18%;
+              top: 14%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(0.5);
+              }
+            }
+      
+            &:nth-child(3) {
+              right: -5%;
+              top: 49%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(1.1);
+              }
+            }
+          }    
+        }
+      
+        &.four-card {
+          > i {
+            position: absolute;
+        
+            &:nth-child(1) {
+              bottom: 12%;
+              left: 10%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(0.8);
+              }
+            }
+        
+            &:nth-child(2) {
+              right: -30%;
+              top: 10%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(0.5);
+              }
+            }
+      
+            &:nth-child(3) {
+              left: 0%;
+              top: -4%;
+              z-index: 5;
+        
+              &:before {
+                transform: scale(1.1);
+              }
+            }
+          }    
         }
 
-        img {
-          @include screen('lg', 'max') {
+        @include screen('lg', 'max') {
+          opacity: 1.0 !important;
+          display: block;
+          position: relative;
+          left: 0;
+          top: 0;
+          transition: opacity 500ms ease 0s;
+          z-index: 4;
+
+          img {
             width: 100%;
             height: auto;
           }
-        }*/
+        }
       }
 
       &:hover {
