--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -13,7 +13,7 @@ mixin right-group-link(json)
 
 mixin header
   .header
-    .header-static
+    .header-static.visual-animation-base-block-m
       .header-box
         a.header-box-logotype(href="/")
           +icon('logotype', 'svg')
