--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -1,9 +1,9 @@
 
-.visual-animation-word, .visual-animation-word-s {
+.visual-animation-word, .visual-animation-word-s, .visual-animation-word-m {
   white-space: nowrap;
 }
 
-.visual-animation-showing, .visual-animation-showing-s {
+.visual-animation-showing, .visual-animation-showing-s, .visual-animation-showing-m {
   -webkit-perspective: 400px;
   perspective: 400px;
   -webkit-transform-style: flat;
@@ -36,9 +36,18 @@
   .visual-animation-showing-block-s > *:nth-child(#{$i}n) {
     animation-delay: #{$i * 250}ms;
   }
+
+  @for $j from 1 through 50 {
+    .visual-animation-showing-m > *:nth-child(#{$i}n) > *:nth-child(#{$j}n) {
+      animation-delay: #{$i*$j * 30}ms;
+    }
+  }
+  .visual-animation-showing-block-s > *:nth-child(#{$i}n) {
+    animation-delay: #{$i * 250}ms;
+  }
 }
 
-.visual-animation-base-block, .visual-animation-base-block-s {
+.visual-animation-base-block, .visual-animation-base-block-s, .visual-animation-base-block-m {
   -webkit-transform-style: flat;
   transform-style: flat;
 
@@ -52,7 +61,7 @@
   }
 }
 
-.visual-animation-showing-block, .visual-animation-showing-block-s {
+.visual-animation-showing-block, .visual-animation-showing-block-s, .visual-animation-showing-block-m {
   > * {
     opacity: 1.0;
     -webkit-animation: notransform 1s;
@@ -61,7 +70,7 @@
   }
 }
 
-.visual-animation-base, .visual-animation-base-s {
+.visual-animation-base, .visual-animation-base-s, .visual-animation-base-m {
   -webkit-perspective: 400px;
   perspective: 400px;
   -webkit-transform-style: flat;
