--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -331,6 +331,7 @@
     max-width: 1400px;
     margin: 0 auto;
     position: relative;
+    z-index: 5;
 
     &-logotype {
       position: relative;
@@ -355,9 +356,9 @@
     &-nav {
       width: 100%;
       position: absolute;
-      top: 50%;
+      top: 0;
       // transition: transform .3s;
-      transform: translateY(-50%);
+      // transform: translateY(-50%);
 
       @include screen('custom-660', 'max') {
         &.lg {
