--- a/app/scss/components/partners/main.scss
+++ b/app/scss/components/partners/main.scss
@@ -48,6 +48,7 @@ section {
   flex-direction: column;
   align-items: flex-start;
   padding-top: 216px;
+  padding-bottom: 120px;
 
   @include screen('custom-800', 'max') {
     padding-top: 166px;
@@ -70,6 +71,20 @@ section {
       transition: 0.2s;
       margin-right: 50px;
 
+      &.active {
+        color: $color-text-complementary-two;
+        position: relative;
+
+        &::after {
+          margin-top: 5px;
+          display: block;
+          content: '';
+          height: 1px;
+          color: $color-text-complementary-two;
+          background: $color-text-complementary-two;
+        }
+      }
+
       @include screen('sm', 'max') {
         font-size: 20px;
         margin-right: 20px;
@@ -81,22 +96,8 @@ section {
         margin-right: 10px;
       }
 
-      &::after {
-        margin-top: 5px;
-        display: block;
-        content: '';
-        height: 1px;
-        color: $color-text-complementary-two;
-        background: $color-text-complementary-two;
-        visibility: hidden;
-      }
-
       &:hover {
         color: $color-text-complementary-two;
-      }
-
-      &:hover::after {
-        visibility: visible;
       }
     }
   }
