--- a/app/scss/components/news/detail.scss
+++ b/app/scss/components/news/detail.scss
@@ -44,7 +44,7 @@
       content: "";
       display: block;
       position: absolute;
-      bottom: 0;
+      bottom: 1%;
       left: 50%;
       transform: translateX(-50%);
       width: 100vw;
