--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -19,7 +19,7 @@ html(lang="ru")
             .img-back
                 .img-front-container
                     .img-front
-        .container
+        .container.visual-animation-base-block-m
             block content
             include ../modules/footer
         .modal
