--- a/app/scss/components/forms/defaultForm.scss
+++ b/app/scss/components/forms/defaultForm.scss
@@ -18,6 +18,7 @@
     width: 100%;
     justify-content: space-between;
     flex-flow: wrap;
+    align-items: start;
 
     @include screen("custom-660", "max") {
       flex-direction: column;
