--- a/app/templates/pages/recept_detail.pug
+++ b/app/templates/pages/recept_detail.pug
@@ -11,7 +11,7 @@ block variables
 
 block content
   +header()
-  section.main-recept.bg-additional
+  section.main-recept.waveSection-bottom(data-color="#f6f5f3").bg-additional
     .content.main-recept-box
       .pagination
         a.pagination-back.white(href="./recept_list.html") Рецепты
