--- a/app/templates/mixins/ui.pug
+++ b/app/templates/mixins/ui.pug
@@ -19,8 +19,8 @@ mixin inputField(type_param, id_param, label, binding = true)
 
 mixin textarea(id_param, cols_param, rows_param, label_text, label_addon)
   .main-field
-    textarea(name=id_param, id=id_param cols=cols_param, rows=rows_param)
-    label(for=id_param class="main-field-name") #{label_text}
+    textarea(name=id_param, id=id_param cols=cols_param, rows=rows_param, placeholder=label_text)
+    label(for=id_param class="main-field-name")
     if(label_addon != '')
       label(for=id_param class="main-field-addon") #{label_addon}
 
