--- a/app/templates/modules/wherebuy.pug
+++ b/app/templates/modules/wherebuy.pug
@@ -4,7 +4,7 @@ mixin wherebuy
       .wherebuy-group&attributes(attributes)
         .left
           .title.visual-animation-base Где купить?
-          .desc Мы представлены в самые крупных и популярных торговых сетях в России.
+          .desc Мы представлены в самые крупных <br>и популярных торговых сетях в России.
         .right.visual-animation-base-block
           +link('Подробнее', '#', 'true')
     .shopsbg-marquee
