--- a/app/templates/pages/product.pug
+++ b/app/templates/pages/product.pug
@@ -95,6 +95,6 @@ block content
           .image
               img(src="./images/img-products-3-min.png")
               img(src="./images/img-products-3-min.png")
-    +recepts()
+    +recepts(1)
     +subscriptionForm().bg-white
     +footer().bg-white
