--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -41,7 +41,7 @@ block content
         +btn-slider('left').bg-white#slider-main-left
         +btn-slider('right').bg-white#slider-main-right
       .main-index-box-control-items
-  +recepts()
+  +recepts(1)
   section.promo.bg-additional.waveSection(data-color="#f6f5f3")
     .content.promo-box
       .promo-box-top
