--- a/app/templates/pages/howdo.pug
+++ b/app/templates/pages/howdo.pug
@@ -27,9 +27,9 @@ block content
       .main-partners-box-nav
         +main-partners-box-nav-el(getData('pages/partners/main'))
       .main-howdo-header
-        .description-howdo
+        .description-howdo.visual-animation-base-block
           h2.visual-animation-base Приемка и подготовка молока
-          .description-howdo-offset.visual-animation-base-block
+          .description-howdo-offset
             .text Сырье проходит входной контроль на соответствие качества установленным требованиям по следующим показателям:
             ul.list-main
               li Органолептические (вкус, цвет, запах)
@@ -37,45 +37,45 @@ block content
               li Микробиологические
               li Массовая доля жира и белка
             .total После положительного заключения лаборатории о качестве сырья, молоко проходит нормализацию и пастеризацию
-        .image-howdo.visual-animation-base-block
+        .image-howdo
           img.mouseParalax(src="./images/main-howdo-bg-1.svg")
-        .number-stage.visual-animation-base-block 01
+        .number-stage 01
   section.main-howdo-cooking
-    .content.main-howdo-cooking-box
+    .content.main-howdo-cooking-box.visual-animation-base-block
       .image-howdo.visual-animation-base-block
         img.mouseParalax(src="./images/main-howdo-bg-2.png")
       .description-howdo
         h2.visual-animation-base Приготовление сырной массы
-        .description-howdo-offset.visual-animation-base-block
+        .description-howdo-offset
           .text Далее, разделяем молоко на сыворотку и молочный белок. Молочный белок используется для изготовления мягких и полутвердых фигурных сыров. <br><br> Сыворотка отправляется в цех сушки, для получения молочной сухой сыворотки.
-      .number-stage.visual-animation-base-block 02
+      .number-stage 02
   section.main-howdo-salting
-    .content.main-howdo-salting-box
+    .content.main-howdo-salting-box.visual-animation-base-block
       .description-howdo
         h2.visual-animation-base Формовка и посолка
-        .description-howdo-offset.visual-animation-base-block
+        .description-howdo-offset
           .text При производстве сыров «Сулугуни», «Чечил», «Охотничий», «Косичка», «Спагетти» сырная масса подвергается плавлению. Из сырных нитей мастера-сыровары плетут сыры. При производстве сыра «Адыгейский» сырная масса укладывается в формовочные корзины. <br><br> Все сыры отправляются на процедуру соления и охлаждения, а отдельные виды — проходят естественный процесс копчения.
-      .image-howdo.visual-animation-base-block
+      .image-howdo
         img.mouseParalax(src="./images/main-howdo-bg-3.png")
-      .number-stage.visual-animation-base-block 03
+      .number-stage 03
   section.main-howdo-cool.waveSection-top(data-color="#f6f5f3").bg-additional
-    .content.main-howdo-cool-box
-      .image-howdo.visual-animation-base-block
+    .content.main-howdo-cool-box.visual-animation-base-block
+      .image-howdo
         img.mouseParalax(src="./images/main-howdo-bg-4.png")
       .description-howdo
         h2.visual-animation-base Охлаждение и упаковка
-        .description-howdo-offset.visual-animation-base-block
+        .description-howdo-offset
           .text Во время охлаждения сыра «Адыгейский» происходит процесс самопрессования. Для сохранения свежести и защиты от внешней среды все виды сыров упаковываются в вакуумную пленку.
-      .number-stage.visual-animation-base-block 04
+      .number-stage 04
   section.main-howdo-delivery.bg-additional
-    .content.main-howdo-delivery-box
+    .content.main-howdo-delivery-box.visual-animation-base-block
       .description-howdo
         h2.visual-animation-base Доставка
-        .description-howdo-offset.visual-animation-base-block
+        .description-howdo-offset
           .text В автопарке завода 16 корпоративных грузовых машин, предназначенных для доставки готовой продукции до складов и распределительных центров. Во всех автомобилях установлены системы с температурного режима.
-      .image-howdo.visual-animation-base-block
+      .image-howdo
         img.mouseParalax(src="./images/main-howdo-bg-5.png")
-      .number-stage.visual-animation-base-block 05
-  +about('Перейти в каталог', './catalog.html').bg-additional
+      .number-stage 05
+  +about('Перейти в каталог', './catalog.html').bg-additional.visual-animation-base-block
   +subscriptionForm().bg-additional
   +footer().bg-additional
