--- a/app/scss/components/products/next-product.scss
+++ b/app/scss/components/products/next-product.scss
@@ -10,19 +10,21 @@ section.next {
     background-image: unset;
   }
 
-  &::after {
+  > .wave {
     display: block;
     left: 0;
     bottom: 0;
     content: "";
-    background: url(../images/catalog-bottom.png) no-repeat;
-    background-position: bottom;
-    background-size: contain;
     z-index: 2;
     width: 100%;
     height: 69px;
     position: absolute;
-}
+    background-color: #fff;
+
+    @include screen('custom-860', 'max') {
+      display: none;
+    }
+  }
 }
 
 .next-product {
@@ -127,7 +129,7 @@ section.next {
         }
 
         &:first-child {
-          left: -30%;
+          left: -38%;
           position: absolute;
         }
       }
