--- a/app/scss/components/products/product.scss
+++ b/app/scss/components/products/product.scss
@@ -25,10 +25,15 @@
   }
 }
 
+.recepts-box.productpage-padding {
+  padding-bottom: 0;
+}
+
 .main-product {
   position: relative;
   padding-right: 0px;
   padding-left: 0px;
+  overflow: hidden; //Для полоски с магазинами
 
   &-box {
     display: flex;
@@ -88,7 +93,6 @@
       }
 
       &-img {
-        padding-bottom: 150px;
         width: 100%;
         height: auto;
         position: relative;
@@ -152,7 +156,7 @@
           }
 
           .cloud-1 {
-            left: 0%;
+            left: 3%;
             top: 20%;
             transform: translateX(-200px);
             transition: 0.8s ease-out;
@@ -164,8 +168,8 @@
 
           .cloud-2 {
             font-size: 6px;
-            bottom: 31%;
-            right: 10%;
+            bottom: 14%;
+            right: 8%;
             transform: translateX(-550px);
             transition: 1.1s ease-out;
 
@@ -175,8 +179,8 @@
           }
 
           .cloud-3 {
-            bottom: 48%;
-            right: 17%;
+            bottom: 33%;
+            right: 14%;
             transform: translateX(-680px);
             transition: 1s ease-out;
             z-index: -1;
@@ -188,8 +192,8 @@
 
           .rhombus-1 {
             font-size: 8px;
-            left: 6%;
-            bottom: 49%;
+            left: 3%;
+            bottom: 40%;
             transform: translateX(-150px);
             transition: 0.9s ease-out;
 
@@ -206,8 +210,8 @@
 
           .rhombus-2 {
             font-size: 4px;
-            left: 17%;
-            bottom: 45%;
+            left: 15%;
+            bottom: 32%;
             transform: translateX(-300px);
             transition: 0.8s ease-out;
 
@@ -217,7 +221,7 @@
           }
 
           .print {
-            bottom: 0;
+            bottom: -33%;
             right: -1%;
             @include screen('lg', 'max') {
               font-size: 8px;
@@ -377,7 +381,26 @@
           position: relative;
           width: 100%;
           height: auto;
-          overflow: hidden;
+
+          &::after {
+            position: absolute;
+            content: "";
+            display: block;
+            background: url('../images/slider-product-dashed-line.svg');
+            bottom: 40%;
+            left: -100%;
+            width: 100vw;
+            height: 165px;
+
+            @include screen('sm', 'max') {
+              display: none;
+            }            
+          }
+
+          .slider-owerflow {
+            overflow: hidden;
+            z-index: 3;
+          }
 
           .buttons {
             position: absolute;
