--- a/app/templates/modules/recepts.pug
+++ b/app/templates/modules/recepts.pug
@@ -10,7 +10,7 @@ mixin recept-slider(json)
 mixin recepts(title_type)
   section.recepts
     canvas.recepts-dashed(width="100%", height="100%")
-    .content.recepts-box
+    .content.recepts-box&attributes(attributes)
       .recepts-box-left 
 
         if(title_type == 1)
