--- a/app/templates/pages/catalog-products.pug
+++ b/app/templates/pages/catalog-products.pug
@@ -1,4 +1,4 @@
-extends ../layouts/default.pug
+extends ../layouts/products-default.pug
 
 include ../modules/forms.pug
 include ../modules/footer.pug
@@ -10,9 +10,7 @@ block variables
 block content
     +header()
     section.main-products
-      canvas.main-catalog-products-dashed(width="100%", height="100%")
       .content.main-products-box
-        span.title-page Вытяжные
         .main-products-category.visual-animation-base-block
           a.main-products-category-el(href="#")
             .category-el-icon
@@ -36,7 +34,7 @@ block content
             .category-el-title Сыворотка
             
         .main-products-items
-          a.products-el(href="./product.html.html")
+          a.products-el(href="./product.html")
             .products-el-img.visual-animation-base-block
               img(src="./images/img-products-1-min.png")
               img(src="./images/img-products-1-min.png")
